--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body
+  
   <p>Nothing to see here...</p>
+  <h1>My Name is Tanmoy</h1>
   <!-- Project -->
   <script src="main.js"></script>
 </body>
